...
                            Icone={Users}
                            titulo="Todos os meus grupos"
                            onPress={() => irPara(() => router.push("/(groups)"))}
                        />
                        <Acao
                            Icone={Compass}
                            titulo="Procurar grupos públicos"
                            separador
                            onPress={() => irPara(() => router.push("/(groups)/browse-groups"))}
                        />
                        <Acao
                            Icone={Plus}
                            titulo="Criar um grupo"
...
